--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 src/assets/ml_models/* filter=lfs diff=lfs merge=lfs -text
+*.onnx filter=lfs diff=lfs merge=lfs -text
+*.json filter=lfs diff=lfs merge=lfs -text
