--- a/package.json
+++ b/package.json
@@ -1,31 +1,3 @@
-{
-  "name": "dwriter",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@xenova/transformers": "^2.17.2",
-    "framer-motion": "^11.3.19",
-    "react": "^18.3.1",
-    "react-calendar": "^5.0.0",
-    "react-dom": "^18.3.1",
-    "react-icons": "^5.2.1",
-    "react-router-dom": "^6.25.1",
-    "react-top-loading-bar": "^2.3.1",
-    "styled-components": "^6.1.12"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-react": "^4.3.1",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react": "^7.34.3",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-refresh": "^0.4.7",
-    "vite": "^5.3.4"
-  }
-}
+version https://git-lfs.github.com/spec/v1
+oid sha256:49715fb5bf75dbd066ba7bdad93d846f4d3f51f426f2d28ce62fcf9a7bae552b
+size 827
