--- a/package.json
+++ b/package.json
@@ -1,3 +1,41 @@
-version https://git-lfs.github.com/spec/v1
-oid sha256:2b68427acc149e0ff37e16ae424cdd5619d8cbd18b032a714e943a4cd76c926a
-size 1133
+{
+  "name": "dwriter",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview",
+    "tauri": "tauri",
+    "tauri:dev": "tauri dev",
+    "tauri:build": "tauri build",
+    "test": "vitest"
+  },
+  "dependencies": {
+    "@xenova/transformers": "^2.17.2",
+    "framer-motion": "^11.3.19",
+    "react": "^18.3.1",
+    "react-calendar": "^5.0.0",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
+    "react-router-dom": "^6.25.1",
+    "react-top-loading-bar": "^2.3.1",
+    "styled-components": "^6.1.12"
+  },
+  "devDependencies": {
+    "@tauri-apps/api": "^1.6.0",
+    "@tauri-apps/cli": "^1.6.0",
+    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/react": "^16.0.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.34.3",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-refresh": "^0.4.7",
+    "jsdom": "^25.0.0",
+    "vite": "^5.3.4",
+    "vitest": "^2.0.5"
+  }
+}
