--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@tauri-apps/plugin-fs": "^2.0.0-rc.1",
     "@xenova/transformers": "^2.17.2",
     "framer-motion": "^11.3.19",
     "react": "^18.3.1",
